结算账户,详情页面

--- a/tourist-web/src/main/webapp/view/supplier/main.html
+++ b/tourist-web/src/main/webapp/view/supplier/main.html
@@ -105,7 +105,7 @@
                     <ul class="nav nav-second-level">
                         <li><a class="J_menuItem" href="supplierDetails.html">供应商信息</a>
                         </li>
-                        <li><a class="J_menuItem" href="">收款账户</a>
+                        <li><a class="J_menuItem" href="payeeAccountDetails.html">收款账户</a>
                         </li>
                         <li><a class="J_menuItem" href="">后台权限</a>
                         </li>
