--- a/tourist-web/src/main/webapp/view/common/orderList.html
+++ b/tourist-web/src/main/webapp/view/common/orderList.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="http://resali.huobanplus.com/cdn/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/bootstrap-table.min.css"/>
     <link href="../../assets/libs/layer/skin/layer.css" rel="stylesheet"/>
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css"/>
     <style>
         .panel-success {
             border-color: #1dc5a3;
@@ -86,7 +86,7 @@
 
                                     <div class="form-group">
                                         <label class="control-label" for="payDate">支付时间：</label>
-                                        <input size="50" class="form-control"  type="text"
+                                        <input size="50" class="form-control" type="text"
                                                id="payDate" name="payDate" placeholder="支付时间"/>
                                     </div>
 
@@ -110,58 +110,62 @@
             </form>
         </div>
     </div>
-</div>
-
-<div class="tabs-container">
-    <ul id="shortcutSearch" class="nav nav-tabs">
-        <li class="active"><a data-toggle="tab" aria-expanded="true">全部</a>
-        </li>
-        <li class=""><a data-toggle="tab" aria-expanded="false">未支付</a>
-        </li>
-        <li class=""><a data-toggle="tab" aria-expanded="false">已支付</a>
-        </li>
-        <li class=""><a data-toggle="tab" aria-expanded="false">已确认</a>
-        </li>
-        <li class=""><a data-toggle="tab" aria-expanded="false">已完成</a>
-        </li>
-        <li class=""><a data-toggle="tab" aria-expanded="false">退款中</a>
-        </li>
-        <li class=""><a data-toggle="tab" aria-expanded="false">已退款</a>
-        </li>
-        <li class=""><a data-toggle="tab" aria-expanded="false">已取消</a>
-        </li>
-    </ul>
-    <div class="tab-content">
-        <table data-toggle="table" data-url="../../mock/supplier/orderList.json"
-               data-method="get" data-side-pagination="server" data-pagination="true" data-striped="true"
-               data-page-number="1" data-page-size="10" data-page-list="[10, 25, 50, 100, All]"
-               data-escape="true" data-query-params="getParams" data-toolbar="#toolbar">
-            <thead>
-            <tr>
-                <th data-field="orderNo" data-align="center">订单号</th>
-                <th th:if="${#authorization.expression('hasRole(''ROLE_MA'')')}"
-                    data-field="supplierName" data-align="center">供应商名称
-                </th>
-                <th data-field="touristName" data-align="center" data-formatter="touristNameFormatter">路线名称</th>
-                <th data-field="orderMoney" data-align="center" data-sortable="true">金额</th>
-                <th data-field="buyerName" data-align="center" data-sortable="true">购买人</th>
-                <th data-field="payTypeValue" data-align="center" data-sortable="true">支付状态</th>
-                <th data-field="createTime" data-align="center" data-sortable="true">下单时间</th>
-                <th data-field="payTime" data-align="center" data-sortable="true">支付时间</th>
-                <th data-field="payType" data-align="center" data-sortable="true">支付方式</th>
-                <th data-field="touristDate" data-align="center" data-sortable="true"
-                    data-formatter="touristDateFormatter" data-events="touristDateEvents">出行时间</th>
-                <th data-field="peopleNumber" data-align="center" data-sortable="true">购买数量</th>
-                <th data-field="remarks" data-align="center" data-formatter="remarkFormatter"
-                    data-events="remarkEvents">备注</th>
-                <th data-field="action" data-formatter="actionFormatter" data-events="actionEvents"
-                    data-align="center">操作
-                </th>
-            </tr>
-            </thead>
-        </table>
+    <div class="panel panel-default">
+        <div class="tabs-container">
+            <ul id="shortcutSearch" class="nav nav-tabs">
+                <li class="active"><a data-toggle="tab" aria-expanded="true">全部</a>
+                </li>
+                <li class=""><a data-toggle="tab" aria-expanded="false">未支付</a>
+                </li>
+                <li class=""><a data-toggle="tab" aria-expanded="false">已支付</a>
+                </li>
+                <li class=""><a data-toggle="tab" aria-expanded="false">已确认</a>
+                </li>
+                <li class=""><a data-toggle="tab" aria-expanded="false">已完成</a>
+                </li>
+                <li class=""><a data-toggle="tab" aria-expanded="false">退款中</a>
+                </li>
+                <li class=""><a data-toggle="tab" aria-expanded="false">已退款</a>
+                </li>
+                <li class=""><a data-toggle="tab" aria-expanded="false">已取消</a>
+                </li>
+            </ul>
+            <div class="tab-content">
+                <table data-toggle="table" data-url="../../mock/supplier/orderList.json"
+                       data-method="get" data-side-pagination="server" data-pagination="true" data-striped="true"
+                       data-page-number="1" data-page-size="10" data-page-list="[10, 25, 50, 100, All]"
+                       data-escape="true" data-query-params="getParams" data-toolbar="#toolbar">
+                    <thead>
+                    <tr>
+                        <th data-field="orderNo" data-align="center">订单号</th>
+                        <th th:if="${#authorization.expression('hasRole(''ROLE_MA'')')}"
+                            data-field="supplierName" data-align="center">供应商名称
+                        </th>
+                        <th data-field="touristName" data-align="center" data-formatter="touristNameFormatter">路线名称</th>
+                        <th data-field="orderMoney" data-align="center" data-sortable="true">金额</th>
+                        <th data-field="buyerName" data-align="center" data-sortable="true">购买人</th>
+                        <th data-field="payTypeValue" data-align="center" data-sortable="true">支付状态</th>
+                        <th data-field="createTime" data-align="center" data-sortable="true">下单时间</th>
+                        <th data-field="payTime" data-align="center" data-sortable="true">支付时间</th>
+                        <th data-field="payType" data-align="center" data-sortable="true">支付方式</th>
+                        <th data-field="touristDate" data-align="center" data-sortable="true"
+                            data-formatter="touristDateFormatter" data-events="touristDateEvents">出行时间
+                        </th>
+                        <th data-field="peopleNumber" data-align="center" data-sortable="true">购买数量</th>
+                        <th data-field="remarks" data-align="center" data-formatter="remarkFormatter"
+                            data-events="remarkEvents">备注
+                        </th>
+                        <th data-field="action" data-formatter="actionFormatter" data-events="actionEvents"
+                            data-align="center">操作
+                        </th>
+                    </tr>
+                    </thead>
+                </table>
+            </div>
+        </div>
     </div>
 </div>
+
 
 <div id="modifyTouristDate" style="margin: 10px;display: none">
 
