--- a/tourist-web/src/main/webapp/view/platform/purchaserProductSetting/purchaserProductSetting.html
+++ b/tourist-web/src/main/webapp/view/platform/purchaserProductSetting/purchaserProductSetting.html
@@ -29,14 +29,15 @@
               : '/distributionPlatform/updatePurchaserProductSetting'}}">
             <div class="cnt form">
                 <div class="division">
-                    <input type="hidden" name="id" id="id" th:value="${purchaserProductSetting.id}">
+                    <input type="hidden" name="id" id="id"
+                           th:value="${purchaserProductSetting!=null ? purchaserProductSetting.id:''}">
                     <table width="100%" border="0" cellpadding="0" cellspacing="0">
                         <tbody>
                         <tr>
                             <th>名称：</th>
                             <td>
                                 <input name="name" type="text" id="name"
-                                       th:value="${purchaserProductSetting.name}"
+                                       th:value="${purchaserProductSetting!=null ? purchaserProductSetting.name:''}"
                                        maxlength="100"
                                        class="input-normal" placeholder="名称">
                             </td>
@@ -52,7 +53,7 @@
                             <td>
                                 <input type="hidden" name="bannerUri" id="bannerUri"
                                        class="input-normal" placeholder="营业执照"
-                                       th:value="${purchaserProductSetting.bannerUri}">
+                                       th:value="${purchaserProductSetting!=null ?purchaserProductSetting.bannerUri:''}">
                                 <div class="col-sm-10" id="banner-uploader"></div>
                             </td>
                         </tr>
@@ -61,7 +62,7 @@
                             <td>
                                 <input type="number" name="price" id="price"
                                        class="input-normal" placeholder="价格"
-                                       th:value="${purchaserProductSetting.price}">
+                                       th:value="${purchaserProductSetting!=null ?purchaserProductSetting.price:''}">
                             </td>
                         </tr>
 
@@ -69,7 +70,8 @@
                             <th>说明：</th>
                             <td>
                                 <textarea rows="" cols="" style="width: 250px; height: 60px;" class="input-normal"
-                                          id="explain" name="explain" th:value="${purchaserProductSetting.explain}"
+                                          id="explain" name="explain"
+                                          th:value="${purchaserProductSetting!=null ?purchaserProductSetting.explain:''}"
                                           placeholder="说明"></textarea>
                             </td>
                         </tr>
@@ -78,7 +80,7 @@
                             <td>
                                 <textarea rows="" cols="" style="width: 250px; height: 60px;" class="input-normal"
                                           id="agreement" name="agreement"
-                                          th:value="${purchaserProductSetting.agreement}"
+                                          th:value="${purchaserProductSetting!=null ?purchaserProductSetting.agreement:''}"
                                           placeholder="协议"></textarea>
                             </td>
                         </tr>
