--- a/tourist-web/src/main/webapp/view/platform/supplier/supplier.html
+++ b/tourist-web/src/main/webapp/view/platform/supplier/supplier.html
@@ -33,14 +33,14 @@
               th:action="@{${supplier==null ? '/distributionPlatform/addSupplier' : '/distributionPlatform/updateSupplier'}}">
             <div class="cnt form">
                 <div class="division">
-                    <input type="hidden" name="id" id="id" th:value="${supplier.id}">
+                    <input type="hidden" name="id" id="id" th:value="${supplier!=null ?supplier.id:''}">
                     <table width="100%" border="0" cellpadding="0" cellspacing="0">
                         <tbody>
                         <tr>
                             <th class="control-label">供应商名称：</th>
                             <td>
                                 <input name="supplierName" type="text" id="supplierName"
-                                       th:value="${supplier.supplierName}"
+                                       th:value="${supplier!=null ?supplier.supplierName:''}"
                                        maxlength="50"
                                        class="form-control" placeholder="请输入模型名称">
                             </td>
@@ -51,7 +51,7 @@
                                 <div style="position: relative; "><!-- container -->
                                     <input readonly type="text" class="form-control" name="address" id="address"
                                            data-toggle="city-picker"
-                                           value="北京市/北京市/海淀区" th:value="${supplier.address}">
+                                           value="北京市/北京市/海淀区" th:value="${supplier!=null ?supplier.address:''}">
                                 </div>
                             </td>
                         </tr>
@@ -59,14 +59,15 @@
                             <th class="control-label">详细地址：</th>
                             <td>
                                 <input type="text" name="detailedAddress" id="detailedAddress"
-                                       th:value="${supplier.detailedAddress}" class="form-control"
+                                       th:value="${supplier!=null ?supplier.detailedAddress:''}" class="form-control"
                                        placeholder="详细地址">
                             </td>
                         </tr>
                         <tr>
                             <th class="control-label">联系人：</th>
                             <td>
-                                <input type="text" name="contacts" id="contacts" th:value="${supplier.contacts}"
+                                <input type="text" name="contacts" id="contacts"
+                                       th:value="${supplier!=null ?supplier.contacts:''}"
                                        class="form-control"
                                        placeholder="联系人">
                             </td>
@@ -75,7 +76,7 @@
                             <th class="control-label">联系电话：</th>
                             <td>
                                 <input type="text" name="contactNumber" id="contactNumber"
-                                       th:value="${supplier.contactNumber}"
+                                       th:value="${supplier!=null ?supplier.contactNumber:''}"
                                        class="form-control"
                                        placeholder="联系电话">
                             </td>
@@ -91,7 +92,7 @@
                             <td>
                                 <input type="hidden" name="businessLicenseUri" id="businessLicenseUri"
                                        class="input-normal" placeholder="营业执照"
-                                       th:value="${supplier.businessLicenseUri}">
+                                       th:value="${supplier!=null ?supplier.businessLicenseUri:''}">
                                 <div class="col-sm-10" id="supplier-uploader"></div>
                             </td>
                         </tr>
@@ -99,7 +100,7 @@
                             <th class="control-label">管理员账号：</th>
                             <td>
                                 <input type="text" name="loginName" id="adminAccount"
-                                       th:value="${supplier.loginName}"
+                                       th:value="${supplier!=null ?supplier.loginName:''}"
                                        class="form-control"
                                        placeholder="管理员账号">
                             </td>
@@ -108,7 +109,7 @@
                             <th class="control-label">管理员密码：</th>
                             <td>
                                 <input type="password" name="password" id="adminPassword"
-                                       th:value="${supplier.password}" class="form-control"
+                                       th:value="${supplier!=null ?supplier.password:''}" class="form-control"
                                        placeholder="管理员密码">
                             </td>
                         </tr>
@@ -116,7 +117,7 @@
                             <th class="control-label">备注：</th>
                             <td>
                                 <textarea rows="" cols="" style="width: 250px; height: 60px;" class="form-control"
-                                          id="remarks" name="remarks" th:value="${supplier.remarks}"
+                                          id="remarks" name="remarks" th:value="${supplier!=null ?supplier.remarks:''}"
                                           placeholder="备注"></textarea>
                             </td>
                         </tr>
